# zsh.theme.infinite

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  infinite.zsh-theme
examples/infinite/: theme.yaml
src/: lib.rs  main.rs  zmod.rs
src/assets/: README.md
src/assets/scripts/: dev.bash-theme  dev.bashrc  dev.zsh-theme  dev.zshrc  infinite.zsh-theme  zmod.sh
src/assets/scripts/zmod/: boot.sh  cleanup.sh
src/modules/: args.rs  utils.rs  zsh.rs
src/modules/utils/: dev.rs  install.rs  paths.rs  uninstall.rs
src/modules/zsh/: daemon.rs  prompt.rs  theme.rs  theme_manager.rs
src/modules/zsh/daemon/: get.rs  paths.rs  server.rs  start.rs  stop.rs
src/modules/zsh/prompt/: hook.rs  left.rs  right.rs  segment.rs  transient.rs
src/modules/zsh/theme/: color_named_color.rs  color_scheme.rs  config_ui.rs  manager.rs  named_color_serde.rs  prompt_theme.rs
src/zmod/: args.rs
zsh-infinite/: infinite.zsh-theme  theme.yaml
zsh-infinite/scripts/: cmd.sh  git.sh  os.sh  pwd.sh  time.sh
