[package]
name = "zsh-infinite"
version = "3.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dialoguer = "0.12.0"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3" # Added for join_all
crossterm = "0.29.0"
unicode-width = "0.2.2"
regex = "1.12.2" # Added for regex operations in install/uninstall
zsh-seq.path="zsh-seq"
zsh-prompts.path="zsh-prompts"
shellexpand = "3.1.1"
daemonize = "0.5.0"
libc = "0.2.178"
rkyv = { version = "0.8.12", features = ["std"] }
