[package]
name = "zsh-infinite"
version = "3.0.0"
edition = "2024"

[lib]
name = "zsh_infinite"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "zsh-infinite"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dialoguer = "0.12.0"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3"
crossterm = "0.29.0"
unicode-width = "0.2.2"
regex = "1.12.2"
zsh-seq.path = "zsh-seq"
zsh-prompts.path = "zsh-prompts"
shellexpand = "3.1.1"
daemonize = "0.5.0"
libc = "0.2.178"
rkyv = "0.8.12"
once_cell = "1.21.3"
zsh-module = "0.3.0"
